# wine_data_mining

./: .gitignore  README.md  TODO.md
orc_airflow/: .envrc  .gitignore  .sqlfluff  pyproject.toml
orc_airflow/orc_airflow/: TODO.md  definitions.py  pdf_parser.py
orc_airflow/orc_airflow/airflow/: airflow.cfg  simple_auth_manager_passwords.json.generated
orc_airflow/orc_airflow/airflow/dags/: bepoz_wine_etl_dag.py  join_wines.py  test_dag.py  wine_list_etl.py
orc_airflow/orc_airflow/airflow/include/: test.sql
orc_airflow/orc_airflow/airflow/include/join_wines/: 01_setup_inputs.sql  (+6 more)
orc_airflow/orc_airflow/dev/: run_partial_wine_list_etl.py
orc_airflow/orc_airflow/notes/: airflow_devnotes.md
wine_list_etl/: README.md  pdfplumber_extraction_line.py  pyproject.toml
wine_list_etl/__marimo__/session/: pdfplumber_extraction_line.py.json
wine_list_etl/tests/: generate_test_files.py  test_wine_list_etl.py  test_wine_list_parser.py
wine_list_etl/tests/datasets/: pages.csv  rects.csv
wine_list_etl/wine_list_etl/: pdf_parser.py  wine_list_etl.py
wine_list_etl/wine_list_etl/datasets/: pages.csv  rects.csv  still_wines.csv
wine_list_etl/wine_list_etl/datasets/wine_regions/: README.md  vineyard_estimates_2015.xls  vineyard_estimates_2015.xlsx
wine_list_etl/wine_list_etl/notes/: devlog.md
wine_list_etl/wine_list_etl/queries/: add_line_numbers.sql  load_wine_list_pages.sql  load_wine_regions.sql  wine_list_etl.sql
wine_list_etl/wine_list_etl/queries/wine_list_etl/: aggregate_lines.sql  decompose_line_text.sql  label_sections.sql  load_wine_list_pages.sql
(+20 files in other folders)
