[project]
name = "orc-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "airflow-provider-duckdb>=0.2.0",
  "apache-airflow>=3.0.2",
  "duckdb>=1.3.1",
  "flask-appbuilder>=4.7.0",
  "graphviz>=0.21",
  "httpx>=0.28.1",
  "ipython>=9.4.0",
  "pandas>=2.3.0",
  "pathlib>=1.0.1",
]


# needed to treat as package i.e. import from submodules
[tool.uv]
package = true
