[project]
name = "wine-list-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.1",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "pdfplumber>=0.11.7",
    "shared-database",
]

[tool.uv.sources]
shared-database = { path = "../shared_database", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
